# dash_scop

./: .dockerignore  .gitignore  .gitlab-ci.yml  .yaml  AGENTS.md  Dockerfile  Dockerfile Old  README.md  main.py  pyproject.toml  readrds.py  requirements.txt  requirements_dev.txt  rpy2_boxplot.py  rpy2_umap.py  rpy2_violin.py  test.yaml  test_boxplot.py  test_dash.py  test_rpy2.py  test_scanpy.py  test_umap.py  test_violin.py
envmodules/: 0.1  0.2  0.4  datascope.py
src/: app.py  callbacks.py  cli.py  data_loader.py  director.py  example.yaml  filedialog.py  helpers.py  layout.py  settings.py  state_store.py  the_filter_chunk.py
src/director/: director.py
src/esrum/: datascope.py
src/esrum/envmodule/: 0.1
src/tests/: datascope.py  run.py  test_boxplot.py
