[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-r-app"
version = "0.1.0"
description = "A Dash app for visualizing data from R using rpy2"
authors = [
    {name = "Carsten Rundsten", email = "carsten.rundsten@sund.ku.dk"}
]
dependencies = [
    "dash",
    "pandas",
    "plotly",
    "rpy2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 108
target-version = "py312"
select = ["E", "F", "I"]  # Common linting rules
fix = true  # Auto-fix linting errors on save

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
